--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,30 @@
     tools:context=".MainActivity"
     android:background="@color/white">
 
-    <TextView
-        android:id="@+id/taskHeading"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/task_heading"
-        android:textColor="@color/blue"
-        android:textSize="28sp"/>
-    
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:foregroundTint="@color/black"
+        android:queryHint="Search tasks"
+        android:theme="@style/ThemeOverlay.SearchView"
+        app:backgroundTint="@color/black"
+        app:iconifiedByDefault="false" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
-        android:padding="16dp"
-        />
+        android:layout_below="@id/searchView"
+        android:padding="16dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/Add_Btn"
@@ -39,5 +45,5 @@
         android:clickable="true"
         android:src="@drawable/baseline_add_24"
         android:tint="@color/white"
-        android:backgroundTint="@color/blue"/>
+        android:backgroundTint="@color/blue" />
 </RelativeLayout>
