--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,13 @@
     </style>
 
     <style name="Theme.ToDoApp" parent="Base.Theme.ToDoApp" />
+    
+    <style name="ThemeOverlay.SearchView" parent="">
+        <item name="android:editTextColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:background">@color/Dark</item>
+
+
+    </style>
 </resources>
+
