--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -34,7 +34,7 @@
         android:layout_height="60dp"
         android:layout_below="@+id/edit_Task_Heading"
         android:layout_marginTop="16dp"
-        android:background="@drawable/blue_boarder"
+        android:background="@drawable/white_boarder"
         android:hint="@string/task_title_hint"
         android:maxLines="1"
         android:padding="12dp"
@@ -46,7 +46,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/updateTitleEditText"
         android:layout_marginTop="12dp"
-        android:background="@drawable/blue_boarder"
+        android:background="@drawable/white_boarder"
         android:gravity="top"
         android:hint="@string/Task_description_box"
         android:padding="12dp"
