--- a/app/src/main/res/drawable/white_boarder.xml
+++ b/app/src/main/res/drawable/white_boarder.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
        <stroke
         android:width="1dp"
-        android:color="@color/blue"/>
+        android:color="@color/white"/>
 
     <corners
         android:radius="8dp"/>
