--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradiant"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".AddTaskActivity">
@@ -14,10 +15,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/bebas_neue"
         android:text="@string/Add_Task"
-        android:textColor="@color/blue"
-        android:fontFamily="@font/kenneyspace"
-        android:textSize="24sp" />
+        android:textColor="@color/white"
+        android:textSize="48sp" />
 
     <ImageView
         android:id="@+id/save_Btn"
@@ -26,6 +27,8 @@
         android:layout_alignTop="@+id/add_Task_Heading"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="6dp"
+        android:background="@drawable/white_boarder"
+        android:padding="10dp"
         android:src="@drawable/baseline_done_24" />
 
     <EditText
@@ -34,10 +37,11 @@
         android:layout_height="60dp"
         android:layout_below="@+id/add_Task_Heading"
         android:layout_marginTop="16dp"
-        android:background="@drawable/blue_boarder"
+        android:background="@drawable/white_boarder"
         android:hint="@string/task_title_hint"
         android:maxLines="1"
         android:padding="12dp"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <EditText
@@ -46,9 +50,10 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/titleedittext"
         android:layout_marginTop="12dp"
-        android:background="@drawable/blue_boarder"
+        android:background="@drawable/white_boarder"
         android:gravity="top"
         android:hint="@string/Task_description_box"
         android:padding="12dp"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 </RelativeLayout>
