--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/white">
+    android:background="@drawable/gradiant"
+    tools:context=".MainActivity">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
@@ -16,6 +16,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:foregroundTint="@color/black"
+        android:hint="@string/search"
         android:queryHint="Search tasks"
         android:theme="@style/ThemeOverlay.SearchView"
         app:backgroundTint="@color/black"
@@ -42,8 +43,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/Dark"
         android:clickable="true"
         android:src="@drawable/baseline_add_24"
-        android:tint="@color/white"
-        android:backgroundTint="@color/blue" />
+        android:tint="@color/white" />
 </RelativeLayout>
