--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -8,35 +8,36 @@
     app:cardElevation="4dp"
 
     app:cardUseCompatPadding="true">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/Dark"
         android:orientation="vertical"
         android:padding="16dp">
-        
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-           android:layout_marginTop="8dp"
-            >
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/titleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/task_title"
-                android:textColor="@color/blue"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
             <ImageView
                 android:id="@+id/updateButton"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="30dp"
-                android:src="@drawable/baseline_edit_24"/>
+                android:src="@drawable/baseline_edit_24" />
 
             <ImageView
                 android:id="@+id/deleteButton"
@@ -44,7 +45,7 @@
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
 
-                android:src="@drawable/baseline_delete_24"/>
+                android:src="@drawable/baseline_delete_24" />
 
         </RelativeLayout>
 
