--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#2C4BFB</color>
+    <color name="blue">#150D5A</color>
     <color name="Dark">#363636</color>
+    <color name="red">#F60000</color>
 </resources>
