--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aguafina_script</item>
+        <item>@font/aldrich</item>
+        <item>@font/bebas_neue</item>
     </array>
 </resources>
