--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,8 +10,8 @@
     <style name="Theme.ToDoApp" parent="Base.Theme.ToDoApp" />
     
     <style name="ThemeOverlay.SearchView" parent="">
-        <item name="android:editTextColor">@color/black</item>
-        <item name="android:textColorHint">@color/black</item>
+        <item name="android:editTextColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
         <item name="android:background">@color/Dark</item>
 
 
