--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -4,28 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradiant"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".UpdateActivity">
+    tools:context=".UpdateTaskActivity">
+
 
     <TextView
         android:id="@+id/edit_Task_Heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
+        android:fontFamily="@font/bebas_neue"
         android:text="@string/Edit_Task"
-        android:textColor="@color/blue"
-        android:fontFamily="@font/kenneyspace"
-        android:textSize="24sp" />
+        android:textColor="@color/white"
+        android:textSize="48sp" />
 
     <ImageView
         android:id="@+id/updateSave_Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/edit_Task_Heading"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="6dp"
+        android:background="@drawable/white_boarder"
+        android:padding="10dp"
         android:src="@drawable/baseline_done_24" />
 
     <EditText
@@ -38,6 +41,7 @@
         android:hint="@string/task_title_hint"
         android:maxLines="1"
         android:padding="12dp"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <EditText
@@ -50,5 +54,6 @@
         android:gravity="top"
         android:hint="@string/Task_description_box"
         android:padding="12dp"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 </RelativeLayout>
